[package]
name = "kepler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.40", features = ["vendored"] }
# url = "2.2.2"
innit = { git = "https://github.com/ambyshframber/innit", features = ["case_insensitive"] }
percent-encoding = "2.1.0"
mime_guess = "2.0.4"
# chrono = "0.4.19"
